move coerced request to new field in Request, clean up openapi schema (#119)
* misc: move coerced request to new field in Request, clean up openapi schema

* get_request should not raise errors

* fix(request_store): get_request signature allow None
